# optimizing-sqlite-for-servers-rust

./: .gitignore  Cargo.toml  README.md
crates/sqlx-sqlite-opt/: Cargo.toml
crates/sqlx-sqlite-opt/examples/: quick_dev.rs
sqlitebench/: go.mod  main.go
