[package]
name = "sqlx-sqlite-opt"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
eyre = "0.6.12"
num_cpus = "1.16.0"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio", "uuid"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.8.0", features = ["v7"] }
